--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
 		"compodoc:build": "compodoc -p tsconfig.doc.json",
 		"compodoc:serve": "compodoc -s",
 		"prebuild": "rimraf dist",
-		"build": "nest build",
+		"build-dev": "NODE_ENV=dev nest build --webpack --webpackPath webpack.config.js",
+		"build-prod": "NODE_ENV=prod nest build --webpack --webpackPath webpack.config.js",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
-		"start:dev": "nest start --watch",
+		"start:dev": "NODE_ENV=dev nest start --webpack --webpackPath webpack.config.js --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
