--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /home
 COPY package.json ./
 RUN yarn install
 COPY . .
-RUN yarn run nest-api:build
+RUN yarn run build-prod
 EXPOSE 3000
 ENTRYPOINT ["node", "./dist/app/main.js"]
