--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"compodoc:build": "compodoc -p tsconfig.doc.json",
 		"compodoc:serve": "compodoc -s",
 		"prebuild": "rimraf dist",
-		"build-dev": "NODE_ENV=dev nest build --webpack --webpackPath webpack.config.js",
-		"build-prod": "NODE_ENV=prod nest build --webpack --webpackPath webpack.config.js",
+		"build-dev": "NODE_ENV=dev nest build",
+		"build-prod": "NODE_ENV=prod nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
 		"start:dev": "NODE_ENV=dev nest start --webpack --webpackPath webpack.config.js --watch",
@@ -42,6 +42,7 @@
 		"@nestjs/platform-express": "9.2.1",
 		"@nestjs/platform-socket.io": "^9.2.1",
 		"@nestjs/schedule": "^2.1.0",
+		"@nestjs/serve-static": "^3.0.0",
 		"@nestjs/swagger": "^6.1.4",
 		"@nestjs/terminus": "^9.1.4",
 		"@nestjs/typeorm": "^9.0.1",
