--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,8 @@ jobs:
             doctl registry login
             docker push $(echo $REGISTRY)/$(echo $NEST_API):latest
 
+            cd /home/resty/k8s
+            kubectl apply -f cloudflared.yaml
+            cd /home/resty/api
             kubectl delete -f k8s/nest-api.k8s.yaml
-            kubectl delete -f k8s/cloudflared.api.yaml
-
-            kubectl apply -f k8s/cloudflared.api.yaml
             kubectl apply -f k8s/nest-api.k8s.yaml
