--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,6 @@ WORKDIR /home
 COPY package.json ./
 RUN yarn install
 COPY . .
-RUN yarn run build-prod
+RUN yarn run build:dev
 EXPOSE 3000
 ENTRYPOINT ["node", "./dist/main.js"]
