--- a/nest-api.k8s.yaml
+++ b/nest-api.k8s.yaml
@@ -2,30 +2,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nest-api-k8s-deployment
+  name: api-k8s-deployment
 spec:
   selector:
     matchLabels:
-      app: nest-api-k8s
+      app: api-k8s
   replicas: 2
   template:
     metadata:
       labels:
-        app: nest-api-k8s
+        app: api-k8s
     spec:
       containers:
-        - name: nest-api-k8s
-          image: registry.digitalocean.com/resty-registry/nest-api:latest
+        - name: api-k8s
+          image: registry.digitalocean.com/resty-registry/api:latest
           ports:
             - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nest-api-service
+  name: api-service
 spec:
   selector:
-    app: nest-api-k8s
+    app: api-k8s
   ports:
     - protocol: TCP
       port: 8080
