--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,5 +40,5 @@ jobs:
             cd /home/resty/k8s
             kubectl apply -f cloudflared.yaml
             cd /home/resty/api
-            kubectl delete -f api.k8s.yaml
-            kubectl apply -f api.k8s.yaml
+            kubectl delete -f ./api.k8s.yaml
+            kubectl apply -f ./api.k8s.yaml
