--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"compodoc:build": "compodoc -p tsconfig.doc.json",
 		"compodoc:serve": "compodoc -s",
 		"prebuild": "rimraf dist",
-		"build-dev": "NODE_ENV=dev nest build",
+		"build:dev": "NODE_ENV=dev nest build",
 		"build-test": "NODE_ENV=dev nest build",
-		"build-prod": "NODE_ENV=prod nest build",
+		"build:prod": "NODE_ENV=prod nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
 		"start:dev": "NODE_ENV=dev nest start --webpack --webpackPath webpack.config.js --watch",
