--- a/api.k8s.yaml
+++ b/api.k8s.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: api-k8s
-          image: registry.digitalocean.com/resty-registry/api:latest
+          image: registry.digitalocean.com/resty-registry/nest-api:latest
           ports:
             - containerPort: 3000
 ---
