--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"class-validator": "^0.14.0",
 		"cloudipsp-node-js-sdk": "^1.0.5",
 		"graphql": "^16.6.0",
+		"graphql-type-json": "^0.3.2",
 		"lodash": "^4.17.21",
 		"multer": "2.0.0-rc.4",
 		"nestjs-twilio": "^3.2.0",
