--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,11 @@ jobs:
 
             doctl registry login
             docker push $(echo $REGISTRY)/$(echo $API):latest
-            doctl registry garbage-collection start --include-untagged-manifests --force
-
+            if doctl registry garbage-collection get-active; then
+              doctl registry garbage-collection start --include-untagged-manifests --force
+            else 
+              echo "already running"
+            fi
             cd /home/resty/k8s
             kubectl apply -f cloudflared.yaml
             cd /home/resty/api
