--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ ca-certificate.crt
 **/*/environments/environment.prod.ts
 **/*/environments/environment.dev.ts
 
-**/*/schema.gql
+apps/nest/api/src/schema.gql
