--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -2,30 +2,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prod-nest-api-k8s-deployment
+  name: dev-nest-api-k8s-deployment
 spec:
   selector:
     matchLabels:
-      app: prod-nest-api-k8s
+      app: dev-nest-api-k8s
   replicas: 2
   template:
     metadata:
       labels:
-        app: prod-nest-api-k8s
+        app: dev-nest-api-k8s
     spec:
       containers:
-        - name: prod-nest-api-k8s
-          image: registry.digitalocean.com/resty-registry/prod-nest-api:latest
+        - name: dev-nest-api-k8s
+          image: registry.digitalocean.com/resty-registry/dev-nest-api:latest
           ports:
             - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: prod-nest-api-service
+  name: dev-nest-api-service
 spec:
   selector:
-    app: prod-nest-api-k8s
+    app: dev-nest-api-k8s
   ports:
     - protocol: TCP
       port: 8080
