--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
 		"start:local": "nest start --webpack --webpackPath webpack.config.js --watch",
-		"start:dev": "NODE_ENV=dev nest start --webpack --webpackPath webpack.config.js --watch",
+		"start:dev": "nest start --webpack --webpackPath webpack.config.js --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
