--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -18,6 +18,7 @@ spec:
           image: registry.digitalocean.com/resty-registry/dev-nest-api:latest
           ports:
             - containerPort: 3000
+            - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -30,6 +31,6 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 3000
-#    - protocol: TCP
-#      port: 80
-#      targetPort: 3000
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
