--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -29,8 +29,10 @@ spec:
     app: dev-nest-api-k8s
   ports:
     - protocol: TCP
+      name: http
       port: 8080
       targetPort: 3000
     - protocol: TCP
+      name: ws
       port: 8081
       targetPort: 8081
