--- a/api.k8s.yaml
+++ b/api.k8s.yaml
@@ -18,6 +18,7 @@ spec:
           image: registry.digitalocean.com/resty-registry/prod-nest-api:latest
           ports:
             - containerPort: 3000
+            - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -27,6 +28,12 @@ spec:
   selector:
     app: prod-nest-api-k8s
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 3000
+    ports:
+      - protocol: TCP
+        name: http
+        port: 8080
+        targetPort: 3000
+      - protocol: TCP
+        name: ws
+        port: 8081
+        targetPort: 8081
