--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
 	"dependencies": {
 		"@nestjs-modules/mailer": "^1.8.1",
 		"@nestjs/apollo": "^10.1.7",
-		"@nestjs/axios": "^1.0.1",
-		"@nestjs/common": "9.2.1",
-		"@nestjs/core": "9.2.1",
+		"@nestjs/axios": "2.0.0",
+		"@nestjs/common": "9.3.3",
+		"@nestjs/core": "9.3.3",
 		"@nestjs/graphql": "^10.1.7",
-		"@nestjs/jwt": "^9.0.0",
+		"@nestjs/jwt": "10.0.1",
 		"@nestjs/passport": "^9.0.0",
-		"@nestjs/platform-express": "9.2.1",
+		"@nestjs/platform-express": "9.3.3",
 		"@nestjs/platform-socket.io": "^9.2.1",
 		"@nestjs/schedule": "^2.1.0",
 		"@nestjs/serve-static": "^3.0.0",
@@ -67,7 +67,7 @@
 		"graphql-type-long": "^0.1.1",
 		"lodash": "^4.17.21",
 		"multer": "2.0.0-rc.4",
-		"nestjs-twilio": "^3.2.0",
+		"nestjs-twilio": "4.0.0",
 		"passport": "^0.6.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.1",
@@ -75,7 +75,7 @@
 		"random-js": "^2.1.0",
 		"reflect-metadata": "^0.1.13",
 		"request-ip": "^3.3.0",
-		"rimraf": "^3.0.2",
+		"rimraf": "4.1.2",
 		"rxjs": "^7.2.0",
 		"socket.io": "^4.5.4",
 		"testcontainers": "^9.1.1",
@@ -85,35 +85,35 @@
 	},
 	"devDependencies": {
 		"@compodoc/compodoc": "^1.1.19",
-		"@nestjs/cli": "9.1.5",
-		"@nestjs/schematics": "9.0.3",
-		"@nestjs/testing": "9.2.1",
+		"@nestjs/cli": "9.2.0",
+		"@nestjs/schematics": "9.0.4",
+		"@nestjs/testing": "9.3.3",
 		"@types/express": "^4.17.13",
-		"@types/jest": "29.2.4",
+		"@types/jest": "29.4.0",
 		"@types/multer": "^1.4.7",
-		"@types/node": "18.11.17",
+		"@types/node": "18.11.19",
 		"@types/supertest": "^2.0.11",
 		"@types/twilio": "^3.19.3",
-		"@typescript-eslint/eslint-plugin": "^5.47.0",
-		"@typescript-eslint/parser": "^5.47.0",
+		"@typescript-eslint/eslint-plugin": "5.51.0",
+		"@typescript-eslint/parser": "5.51.0",
 		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"eslint-plugin-sonarjs": "^0.17.0",
+		"eslint-plugin-simple-import-sort": "10.0.0",
+		"eslint-plugin-sonarjs": "0.18.0",
 		"eslint-plugin-unicorn": "^45.0.2",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"husky": "^8.0.2",
-		"jest": "29.3.1",
+		"jest": "29.4.1",
 		"lint-staged": "^13.1.0",
 		"prettier": "^2.8.1",
 		"pretty-quick": "^3.1.3",
 		"source-map-support": "^0.5.20",
 		"supertest": "^6.1.3",
-		"ts-jest": "29.0.3",
+		"ts-jest": "29.0.5",
 		"ts-loader": "^9.2.3",
 		"ts-node": "^10.0.0",
-		"tsconfig-paths": "4.1.1",
+		"tsconfig-paths": "4.1.2",
 		"typescript": "^4.9.4",
 		"yarn-check": "^0.0.3"
 	},
