--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -7,7 +7,12 @@ spec:
   selector:
     matchLabels:
       app: dev-nest-api-k8s
-  replicas: 1
+  replicas: 2
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -19,6 +24,13 @@ spec:
           ports:
             - containerPort: 3000
             - containerPort: 8081
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+
 ---
 apiVersion: v1
 kind: Service
