--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -26,7 +26,7 @@ spec:
             - containerPort: 8081
           readinessProbe:
             httpGet:
-              path: /
+              path: /graphql
               port: 3000
             initialDelaySeconds: 5
             periodSeconds: 10
