--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -7,11 +7,11 @@ spec:
   selector:
     matchLabels:
       app: dev-nest-api-k8s
-  replicas: 2
+  replicas: 3
   strategy:
     rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+      maxSurge: 1
+      maxUnavailable: 1
     type: RollingUpdate
   template:
     metadata:
