--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -28,6 +28,16 @@ spec:
             httpGet:
               path: /api/health/check
               port: 3000
+            tcpSocket:
+              port: 8081
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          livenessProbe:
+            httpGet:
+              path: /api/health/check
+              port: 3000
+            tcpSocket:
+              port: 8081
             initialDelaySeconds: 3
             periodSeconds: 3
           lifecycle:
