--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"request-ip": "^3.3.0",
 		"rimraf": "4.1.2",
 		"rxjs": "^7.2.0",
+		"sharp": "^0.31.3",
 		"socket.io": "^4.5.4",
 		"testcontainers": "^9.1.1",
 		"twilio": "^3.84.0",
@@ -92,6 +93,7 @@
 		"@types/jest": "29.4.0",
 		"@types/multer": "^1.4.7",
 		"@types/node": "18.11.19",
+		"@types/sharp": "^0.31.1",
 		"@types/supertest": "^2.0.11",
 		"@types/twilio": "^3.19.3",
 		"@typescript-eslint/eslint-plugin": "5.51.0",
