--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -24,6 +24,17 @@ spec:
           ports:
             - containerPort: 3000
             - containerPort: 8081
+          env:
+            - name: MONITORING_TOKEN
+              value: "0f7fa2db-cd12-4a54-acd9-0aaafa0513b7"
+            - name: SPM_RECEIVER_URL
+              value: "https://spm-receiver.eu.sematext.com/receiver/v1"
+            - name: LOGS_RECEIVER_URL
+              value: "https://logsene-receiver.eu.sematext.com"
+            - name: EVENTS_RECEIVER_URL
+              value: "https://event-receiver.eu.sematext.com"
+            - name: INFRA_TOKEN
+              value: "e924b561-5d45-4be5-853d-5f3ce4e84fbb"
           readinessProbe:
             httpGet:
               path: /api/health/check
