--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"request-ip": "^3.3.0",
 		"rimraf": "4.1.2",
 		"rxjs": "^7.2.0",
+		"sematext-agent-express": "^2.1.5",
 		"sharp": "^0.31.3",
 		"socket.io": "^4.5.4",
 		"testcontainers": "^9.1.1",
