--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -59,32 +59,32 @@ spec:
       labels:
         app: dev-nest-api-k8s
     spec:
-      serviceAccountName: spm-agent-nodejs
+      #      serviceAccountName: spm-agent-nodejs
       containers:
         - name: dev-nest-api-k8s
           image: registry.digitalocean.com/resty-registry/dev-nest-api:latest
           ports:
             - containerPort: 3000
             - containerPort: 8081
-          #          env:
-          #            - name: POD_NAME
-          #              valueFrom:
-          #                fieldRef:
-          #                  fieldPath: metadata.name
-          #            - name: POD_NAMESPACE
-          #              valueFrom:
-          #                fieldRef:
-          #                  fieldPath: metadata.namespace
-          #            - name: MONITORING_TOKEN
-          #              value: "0f7fa2db-cd12-4a54-acd9-0aaafa0513b7"
-          #            - name: SPM_RECEIVER_URL
-          #              value: "https://spm-receiver.eu.sematext.com/receiver/v1"
-          #            - name: LOGS_RECEIVER_URL
-          #              value: "https://logsene-receiver.eu.sematext.com"
-          #            - name: EVENTS_RECEIVER_URL
-          #              value: "https://event-receiver.eu.sematext.com"
-          #            - name: INFRA_TOKEN
-          #              value: "e924b561-5d45-4be5-853d-5f3ce4e84fbb"
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: MONITORING_TOKEN
+              value: "0f7fa2db-cd12-4a54-acd9-0aaafa0513b7"
+            - name: SPM_RECEIVER_URL
+              value: "https://spm-receiver.eu.sematext.com/receiver/v1"
+            - name: LOGS_RECEIVER_URL
+              value: "https://logsene-receiver.eu.sematext.com"
+            - name: EVENTS_RECEIVER_URL
+              value: "https://event-receiver.eu.sematext.com"
+            - name: INFRA_TOKEN
+              value: "e924b561-5d45-4be5-853d-5f3ce4e84fbb"
           readinessProbe:
             httpGet:
               path: /api/health/check
