--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -25,24 +25,10 @@ spec:
             - containerPort: 3000
             - containerPort: 8081
           env:
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: MONITORING_TOKEN
-              value: "0f7fa2db-cd12-4a54-acd9-0aaafa0513b7"
-            - name: SPM_RECEIVER_URL
-              value: "https://spm-receiver.eu.sematext.com/receiver/v1"
-            - name: LOGS_RECEIVER_URL
-              value: "https://logsene-receiver.eu.sematext.com"
-            - name: EVENTS_RECEIVER_URL
-              value: "https://event-receiver.eu.sematext.com"
-            - name: INFRA_TOKEN
-              value: "e924b561-5d45-4be5-853d-5f3ce4e84fbb"
+            - name: REGION
+              value: "EU"
+            - name: LOGS_TOKEN
+              value: "00d19095-bbe7-42c1-96c0-4d28c40eb17e"
           readinessProbe:
             httpGet:
               path: /api/health/check
