--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"cloudipsp-node-js-sdk": "^1.0.5",
+		"crypto-js": "^4.1.1",
 		"google-spreadsheet": "^3.3.0",
 		"graphql": "^16.6.0",
 		"graphql-type-json": "^0.3.2",
