--- a/api.k8s.yaml
+++ b/api.k8s.yaml
@@ -7,7 +7,12 @@ spec:
   selector:
     matchLabels:
       app: prod-nest-api-k8s
-  replicas: 1
+  replicas: 3
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -19,6 +24,22 @@ spec:
           ports:
             - containerPort: 3000
             - containerPort: 8081
+          env:
+            - name: REGION
+              value: "EU"
+            - name: LOGS_TOKEN
+              value: "00d19095-bbe7-42c1-96c0-4d28c40eb17e"
+          readinessProbe:
+            httpGet:
+              path: /api/health/check
+              port: 3000
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/bash", "-c", "sleep 120"]
+    terminationGracePeriodSeconds: 60
 ---
 apiVersion: v1
 kind: Service
