--- a/api.dev.k8s.yaml
+++ b/api.dev.k8s.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: dev-nest-api-k8s
     spec:
+      sessionAffinity: ClientIP
       containers:
         - name: dev-nest-api-k8s
           image: registry.digitalocean.com/resty-registry/dev-nest-api:latest
