--- a/api.k8s.yaml
+++ b/api.k8s.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: prod-nest-api-k8s
     spec:
+      sessionAffinity: ClientIP
       containers:
         - name: prod-nest-api-k8s
           image: registry.digitalocean.com/resty-registry/prod-nest-api:latest
