--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -41,5 +41,5 @@ jobs:
             cd /home/resty/k8s
             kubectl apply -f cloudflared.yaml
             cd /home/resty/api
-            kubectl delete -f api.k8s.yaml
             kubectl apply -f api.k8s.yaml
+            kubectl rollout restart deployment prod-nest-api-k8s-deployment
